[package]
name               = "travels-rs"
version            = "0.1.0"
authors            = ["Vladimir Bogaevsky <vbogaevsky@gmail.com>"]

[dependencies]
iron               = "0.6.0"
iron-json-response = "0.6.0"
router             = "0.6.0"
rustc-serialize    = "0.3.24"
serde_json         = "1.0.9"
postgres           = "0.15.1"
diesel             = { version = "1.1.1", features = ["postgres"]}
r2d2               = "0.8.2"
r2d2_postgres      = "0.14.0"
r2d2-diesel        = "1.0.0"
dotenv             = "0.10.1"
