[package]
name               = "travels-rs"
version            = "0.1.0"
authors            = ["Vladimir Bogaevsky <vbogaevsky@gmail.com>"]

[dependencies]
rocket             = "0.3.6"
rocket_codegen     = "0.3.6"
rocket_contrib     = "0.3.6"
serde              = "1.0.27"
serde_derive       = "1.0.27"
postgres           = "0.15.1"
diesel             = { version = "1.1.1", features = ["postgres"]}
r2d2               = "0.8.2"
r2d2_postgres      = "0.14.0"
r2d2-diesel        = "1.0.0"
dotenv             = "0.11.0"

[dev-dependencies]
serde_json         = "1.0.9"
